apply plugin: 'com.android.application'

android {
    configurations.all {
        resolutionStrategy {
            force 'androidx.core:core:1.12.0'
            force 'androidx.lifecycle:lifecycle-viewmodel:2.6.2'
            force 'androidx.fragment:fragment:1.6.2'
        }
    }
    compileSdkVersion 34
    defaultConfig {
        namespace 'ca.uwaterloo.crysp.privacyguard'
        applicationId "ca.uwaterloo.crysp.privacyguard"
        minSdkVersion 21
        //noinspection OldTargetApi
        targetSdkVersion 33
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
            buildConfigField "boolean", "DEBUG", "false"
        }
        debug {
            debuggable true
            buildConfigField "boolean", "DEBUG", "true"
        }
    }
    productFlavors {
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    android {
        buildFeatures {
            buildConfig true  // Включаем генерацию BuildConfig
        }
    }
}

dependencies {
    implementation files('libs/bc.jar')
    implementation files('libs/bsf-2.3.0.jar')
    implementation files('libs/bsh-2.0b4.jar')
    implementation files('libs/chardet.jar')
    implementation files('libs/concurrent.jar')
    implementation files('libs/htmlparser.jar')
    implementation files('libs/java_websocket.jar')
    implementation files('libs/jcifs-1.3.14.jar')
    implementation files('libs/jnetutils.jar')
    implementation files('libs/opencsv-3.8.jar')
    //implementation files('libs/figlib-1.0.11.aar')
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'com.google.android.gms:play-services-maps:18.2.0'
    implementation 'com.androidplot:androidplot-core:1.5.10'
    implementation 'androidx.activity:activity:1.8.0'
    implementation 'androidx.core:core-ktx:1.12.0'
    implementation 'androidx.core:core:1.12.0'
    implementation 'androidx.annotation:annotation:1.7.1'
    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
}

